--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-email/components": "^0.0.36",
+    "convex": "^1.24.1",
     "next": "15.3.1",
     "next-cloudinary": "^6.16.0",
     "react": "^19.0.0",
