--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "@react-email/components": "^0.0.36",
-    "convex": "^1.24.1",
+    "@react-email/render": "^1.1.2",
+    "convex": "^1.24.3",
     "next": "15.3.1",
     "next-cloudinary": "^6.16.0",
     "react": "^19.0.0",
